--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -36,6 +37,8 @@
     ]
   },
   "devDependencies": {
-    "@imtbl/sdk": "^0.28.0"
+    "@imtbl/sdk": "^0.28.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5"
   }
 }
